--- a/RecipesService.Handlers/RecipesService.Handlers.csproj
+++ b/RecipesService.Handlers/RecipesService.Handlers.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RecipesService.Domain\RecipesService.Domain.csproj" />
+    <ProjectReference Include="..\RecipesService.Repository.Interfaces\RecipesService.Repository.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
