--- a/RecipesService.Repository/RecipesService.Repository.csproj
+++ b/RecipesService.Repository/RecipesService.Repository.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RecipesService.Repository.Interfaces\RecipesService.Repository.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
