--- a/RecipesService.Handlers/RecipesService.Handlers.csproj
+++ b/RecipesService.Handlers/RecipesService.Handlers.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
