--- a/RecipesService.Application/Properties/launchSettings.json
+++ b/RecipesService.Application/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:31781",
-      "sslPort": 44347
+      "applicationUrl": "http://localhost:9091",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -13,7 +13,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:9091"
     },
     "RecipesService.Application": {
       "commandName": "Project",
@@ -22,7 +23,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:9091"
     },
     "Docker": {
       "commandName": "Docker",
